fixing dark mode by disabling it

--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,7 @@
 a {
   font-weight: bold;
   text-decoration-line: underline;
-  color: #000000;
-  text-decoration: inherit;
-  
+  text-decoration: inherit;  
 }
 a:hover {
   color: #535bf2;
@@ -68,13 +66,35 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+  a{
+    color: #000000;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #505050;
+  }
+  
+  button {
+    background-color: #f9f9f9;
+  }
+  a{
+    color: #000000;
+  }
+}
+
+
   p{
     text-align:left;
   }
   h3{
     text-align:left;
   }
-}
   img{
     width: 100%;
     height: auto;
